--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,4 +1,5 @@
 @value makerGreen, makerBlack from '../../common/colors.css';
+@value makerWhite from '../../common/colors.css';
 
 .header {
     width:100%;
@@ -29,3 +30,4 @@
     border: 0;
     cursor: pointer;
 }
+
