--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     list-style: none;
-    padding: 0.5em;
+    padding: 0.5rem;
 }
 
 .item {
@@ -27,7 +27,8 @@
     font-size: 1.2rem;
     border-radius: 1.2rem;
     background-color: transparent;
-    border: 01.2rem solid makerGreen;
+    cursor: pointer;
+    border: 0.2rem solid makerGreen;
     outline: 0; 
 }
 
